--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "movie app",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open --hot",
+    "dev": "webpack-dev-server --config webpack.config.dev.js",
     "test": "npm run test",
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.config.prod.js",
     "lint": "eslint --ext .ts,.tsx --fix src",
     "format": "prettier --write \"./**/*.(ts|tsx)\" "
   },
@@ -29,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "babel-loader": "^8.2.5",
+    "dotenv-webpack": "^7.1.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -36,8 +37,10 @@
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-dev-server": "^4.9.0",
+    "webpack-merge": "^5.8.0"
   }
 }
