--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^2.6.2",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
+    "svg-url-loader": "^7.1.1",
     "typescript": "^4.6.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.72.1",
