--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.18.3",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@types/react-redux": "^7.1.24",
+    "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
@@ -27,6 +31,7 @@
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
