--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "concurrently": "^7.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
