--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "concurrently": "^7.2.2",
+    "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
-    "formik": "^2.2.9",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
