--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.dev.js",
     "start": "concurrently \"npm run dev\" \"npm run start -C ./server\"",
-    "test": "npm run test",
+    "test:watch": "jest --watchAll --verbose",
+    "test:coverage": "jest --verbose --coverage",
     "build": "webpack --config webpack.config.prod.js",
     "lint": "eslint --ext .ts,.tsx --fix src",
-    "format": "prettier --write \"./**/*.(ts|tsx)\" "
+    "format": "prettier --write \"./**/*.(ts|tsx)\" ",
+    "cypress:open": "cypress open"
   },
   "keywords": [
     "movie"
@@ -19,7 +21,6 @@
   "dependencies": {
     "@babel/runtime": "^7.18.3",
     "@reduxjs/toolkit": "^1.8.2",
-    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "concurrently": "^7.2.2",
@@ -37,22 +38,39 @@
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
+    "@testing-library/dom": "^8.16.0",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.3.0",
     "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.10.12",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.1",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/react-redux": "^7.1.24",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
+    "babel-jest": "^28.1.3",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "cypress": "^10.3.1",
     "dotenv-webpack": "^7.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
+    "react-test-renderer": "^18.2.0",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.3.1",
@@ -63,5 +81,30 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
     "webpack-merge": "^5.8.0"
+  },
+  "jest": {
+    "testTimeout": 300000,
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts",
+      "tsx"
+    ],
+    "rootDir": "./",
+    "testRegex": ".*\\.(spec|test)\\.(ts|tsx)$",
+    "collectCoverageFrom": [
+      "**/*.(t|j)(s|sx)"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "jsdom",
+    "moduleNameMapper": {
+      "\\.(css|scss)$": "identity-obj-proxy",
+      "^@/(.*)": "<rootDir>/src/$1"
+    },
+    "modulePathIgnorePatterns": [
+      "<rootDir>/node_modules",
+      "<rootDir>/cypress",
+      "<rootDir>/server"
+    ]
   }
 }
