--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "strictNullChecks": false,
     "target": "es6",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["node", "jest"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,    
