--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "movie app",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack.config.dev.js",
     "start": "concurrently \"npm run dev\" \"npm run start -C ./server\"",
+    "dev:*": "webpack-dev-server --mode development --config ./webpack",
+    "dev:client": "webpack-dev-server --mode development --config ./webpack/webpack.config.dev.js",
+    "dev:ssr:server": "cross-env NODE_ENV=development node ./ssr/index.js",
     "test": "npm run test",
-    "build": "webpack --config webpack.config.prod.js",
+    "build:client": "webpack --mode production --config ./webpack/webpack.config.prod.js",
+    "build:ssr:server": "webpack --mode production --config ./webpack/webpack.config.server.js",
+    "start:server": "npm run start -C ./server",
     "lint": "eslint --ext .ts,.tsx --fix src",
     "format": "prettier --write \"./**/*.(ts|tsx)\" "
   },
@@ -17,12 +21,13 @@
   "author": "Joe",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.18.3",
+    "@babel/runtime": "^7.18.9",
     "@reduxjs/toolkit": "^1.8.2",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "clsx": "^1.1.1",
     "concurrently": "^7.2.2",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -33,16 +38,18 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
-    "@babel/plugin-transform-runtime": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.9",
     "@babel/preset-env": "^7.17.12",
     "@babel/preset-react": "^7.17.12",
     "@babel/preset-typescript": "^7.17.12",
     "@types/axios": "^0.14.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
+    "@types/webpack-hot-middleware": "^2.25.6",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "babel-loader": "^8.2.5",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^7.1.0",
     "eslint": "^8.15.0",
@@ -50,6 +57,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "html-webpack-plugin": "^5.5.0",
+    "isomorphic-style-loader": "^5.3.2",
     "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
@@ -62,6 +70,9 @@
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0",
-    "webpack-merge": "^5.8.0"
+    "webpack-hot-middleware": "^2.25.1",
+    "webpack-hot-server-middleware": "^0.6.1",
+    "webpack-merge": "^5.8.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
